1.4.1 beta 2
============
(Ed Yu)
- SF Bug #1605635 NPE in Utils.java

(K. Nakagami)
- SF bug #1597504 Search result page shows shortened query string

(Scott Phillips)
- Manakin eperson.patch adds API methods for searching epeople & groups.

(Andrea Bollini)
- SF Patch #1597807 for SF bug #1597805 DIDL Crosswalk: wrong resource management

(Claudia Juergen)
- SF patch #1589930 for SF bug #1588625 Incorrect text on item mapper screen

(Scott Yeadon)
- SF bug #1596978 View unfinished submissions - collection empty
- SF bug #1596952 Collection Wizard create Template missing schema
- Fix bug in TableRow toString() method where NPE is thrown if tablename not set
- Update DIDL license and change coding style to DSpace standard

(Stuart Lewis)
- SF Patch #1602185 for bug #1589902 Duplicate [field] checking error [on input-forms.xml]
- SF Patch #1598323 Support stats from both 1.3 and 1.4
- SF Patch #1594208 for bug #1592984 Date comparisons strip time in org.dspace.harvest.Harvest
- SF Patch #1596113 [dspace]/bin/update-handle-prefix needs to index-all

(Mark Diggory)
- SF Patch #1600904 Remove cases of System.out from code executed in webapp
- Change "View Licence" to "View License" in Messages.properties

(Robert Tansley)
- Error pages now return appropriate HTTP status codes (e.g. 404 not found)
- Bad filenames in /bitstream/ URLs now result in 404 error -- prevents
  infinite URL spaces confusing crawlers and bad "persistent" bitstream IDs
  circulating
- SF patch #1595902 Prevent infinite URL spaces in HTMLServlet
- InstallItem no longer sets dc.format.extent, dc.format.mimetype; no longer
  sets default value for dc.language.iso if one is not present
- Empty values in drop-down submit fields are not added as empty metadata values
- dspace.cfg comments changed to indicate what default.language actually means
- UIUtil.encodeBitstream() now correctly encodes URLs (no longer incorrectly
  substitutes '+' for spaces in non-query segment.  Fixes bug #1604037.

